fix(knowledge): snapshot all(), fix the tie-break comment